Fix file icon not showing issue

--- a/styles/fonts.less
+++ b/styles/fonts.less
@@ -2,54 +2,54 @@
   font-family: 'FontAwesome';
   font-weight: normal;
   font-style: normal;
-  src: url(fonts/fontawesome-webfont.woff) format('woff');
+  src: url('atom://dark-bint-ui/styles/fonts/fontawesome-webfont.woff') format('woff');
 }
 
 @font-face {
   font-family: "FontMfizz";
-  src: url(fonts/font-mfizz.woff) format("woff");
+  src: url('atom://dark-bint-ui/styles/fonts/font-mfizz.woff') format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "icomoon";
-  src: url(fonts/icomoon.woff) format("woff");
+  src: url('atom://dark-bint-ui/styles/fonts/icomoon.woff') format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "devicons";
-  src: url(fonts/devicons.woff) format("woff");
+  src: url('atom://dark-bint-ui/styles/fonts/devicons.woff') format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "fontcustom";
-  src: url(fonts/docker.woff) format("woff");
+  src: url('atom://dark-bint-ui/styles/fonts/docker.woff') format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "iconsxd";
-  src: url(fonts/iconsxd.woff) format("woff");
+  src: url('atom://dark-bint-ui/styles/fonts/iconsxd.woff') format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "file-icons";
-  src: url(fonts/file-icons.woff) format("woff");
+  src: url('atom://dark-bint-ui/styles/fonts/file-icons.woff') format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "tex";
-  src: url(fonts/tex.woff) format("woff");
+  src: url('atom://dark-bint-ui/styles/fonts/tex.woff') format("woff");
   font-weight: normal;
   font-style: normal;
 }
